sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:8: error: '=' expected but ';' found.
    var i;
         ^