sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var nbValue = getValueCount();
  var fin = false;
  while(!fin) {
    fin = true;
    
    var i;
    for(i <- 0 to nbValue-1-i) {
      if( getValue(i) > getValue(i+1)) {
        swap(i,i+1);
        fin = false;
      }
      i = i+1;
    }
  }
}